factory-server-ptb/factory-server-ptb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factory-server-ptb
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: factory-server-ptb
  template:
    metadata:
      labels:
        app: factory-server-ptb
    spec:
      containers:
      - image: ghcr.io/dysnomia-studio/factory-game-server:0.3.4
        name: factory-server-ptb
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 500m
            memory: 250Mi
          limits:
            cpu: 1500m
            memory: 750Mi
      imagePullSecrets:
      - name: github
