factory-server-ptb/factory-server-ptb-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: factory-server-ptb-ingressroute

spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`ptb.manufacturinc.dysnomia.studio`)
    kind: Rule
    services:
    - name: factory-server-ptb-svc
      port: 80
      sticky:
        cookie:
          name: server_id
          httpOnly: true
          secure: true
          sameSite: none
    middlewares:
      - name: security
  tls:
    certResolver: le
